--- a/index.html
+++ b/index.html
@@ -34,6 +34,18 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 </head>
+  <script>
+	 (function(c, o, n, v, r, p) {
+      p = o.getElementsByTagName('head')[0];
+      r = o.createElement('script');
+      r.async = 1;
+      r.src = n + v;
+      r.onload = () => {
+          c._we.init('7354225653927584','dev')
+    };
+    p.appendChild(r);
+    })(window, document, 'https://infinity-public-js.500apps.com/', 'convertpath.min.js');
+</script>
 
 <body>
 
