--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       r.async = 1;
       r.src = n + v;
       r.onload = () => {
-          c._we.init('6925376892805972','dev')
+          c._we.init('3361570551447677','ap1')
     };
     p.appendChild(r);
     })(window, document, 'https://infinity-public-js.500apps.com/', 'convertpath.min.js');
